Fix alignment of drop target label

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -133,6 +133,7 @@
   &__drop-overlay {
     .full-size();
     .center-content();
+    text-align: center;
     padding: 10px;
     opacity: 0;
     color: #fff;
